[gd_scene load_steps=2 format=3 uid="uid://50n8m4uyr5pr"]

[ext_resource type="Script" uid="uid://r83xsejgtn5d" path="res://scenes/interface/cards/status/status_object_base.gd" id="1_c53ur"]

[node name="StatusObjectBase" type="Node3D"]
script = ExtResource("1_c53ur")

[node name="TimerLifespan" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerLifespan" to="." method="_on_timer_lifespan_timeout"]
